:bug: Fix unfinished red not showing

--- a/style.css
+++ b/style.css
@@ -86,7 +86,6 @@
 }
 
 .inspirator a {
-    color: #14456E;
     text-decoration: none;
 }
 
